@@ -1,5 +1,5 @@
 #!/bin/sh -x
-CLASSPATH=../craftbukkit-1.2.3-R0.1.jar:../SERVER/plugins-disabled/WorldGuard.jar javac *.java -Xlint:deprecation -Xlint:unchecked
+CLASSPATH=../craftbukkit-1.2.5-R0.1.jar:../SERVER-exphc11/plugins-disabled/WorldGuard.jar javac *.java -Xlint:deprecation -Xlint:unchecked
 rm -rf me
 mkdir -p me/exphc/EnchantMore
 mv *.class me/exphc/EnchantMore/
