@@ -1,7 +1,9 @@
 X   X   
     * Add Sword + Feather Falling = launch victim (right-click)
-    * Add Hoe + Knockback = knock victim into ground (right-click)
+    * Add Hoe + Knockback = eat dirt (right-click to knock into ground)
     * Add Boots + Feather Falling X = zero fall damage
+    * Remove Sword + Flame = lit path (sorry, doesn't work in 1.2+)
+    * Remove Axe + Flame II, Pickaxe + Flame II, Shovel + Flame II (see above)
     * Fix Sword + Infinity, now damages item on use
 
 2012-03-13  0.8.2
